Fix hero header height on mobile
After looking around on my phone, 150px was to small for most of the faq pages. 250px seems to look fine on mobile so just use that everywhere.

--- a/web/scss/components/_hero.scss
+++ b/web/scss/components/_hero.scss
@@ -33,13 +33,7 @@
   }
 
   &.hero--half-height {
-    @media (min-width: 951px) {
-      height: 250px;
-    }
-
-    @media (max-width: 950px) {
-      height: 150px;
-    }
+    height: 250px;
   }
 
   &.hero--news {
